# verizon_scanner

./: Cargo.toml  input_addresses.csv
src/: main.rs  verizon_api.rs
